# automatheque

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: git-identity.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
src/automatheque/: CHANGELOG  MANIFEST.in  README.md  log.yaml.dist  pyproject.toml  setup.py
src/automatheque.factrice/: CHANGELOG  MANIFEST.in  README.md  log.json.dist  pyproject.toml  setup.py
src/automatheque.factrice/automatheque/factrice/: expedition.py  preparation.py
src/automatheque.factrice/automatheque/factrice/app/: __init__.py
src/automatheque.factrice/tests/: test_app.py  test_expedition.py  test_preparation.py
src/automatheque.schema/: .gitignore  CHANGELOG  MANIFEST.in  README.md  pyproject.toml  setup.py
src/automatheque.schema/automatheque/schema/texte/: __init__.py  courriel.py
src/automatheque.schema/tests/texte/: test_courriel.py
src/automatheque/automatheque/: configuration.py  constantes.py  essai.py  exceptions.py  log.py  script.py
src/automatheque/automatheque/conception/structures/: __init__.py  adaptateur.py  borg.py  fabrique.py  monteur.py  registre.py  singleton.py
src/automatheque/automatheque/greffon/: __init__.py  capacite.py  greffon.py  registre.py
src/automatheque/automatheque/plugin/: plugin.py
src/automatheque/automatheque/suivi/: journal.py  ports.py  suivi.py
src/automatheque/automatheque/suivi/adaptateurs/: repertoire.py
src/automatheque/automatheque/util/: __init__.py  classe.py  dependances_externes.py  fichier.py  reessaye.py  repertoire.py  script.py  structures_python.py
src/automatheque/tests/: test_configuration.py  test_dependances_externes.py  test_essai.py  test_log.py  test_script.py
src/automatheque/tests/greffon/: test_greffon.py
src/automatheque/tests/suivi/: test_suivi.py
src/automatheque/tests/util/: test_fichier.py  test_reessaye.py  test_repertoire.py  test_structures_python.py
