[project]
name = "automatheque.factrice"
version = "0.11.0"
description = "Librairie et app simplifiée d'envoi de mail"
authors = [{name = "Marc", email = "githubmarc@maj44.com"}]
license = {text = "GPLv3.0"}
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "automatheque>=0.9.6",
    # 0.9.6 est la plus ancienne version publiée d'automatheque.schema ; le
    # plancher précédent (>=0.9.5) référençait une version jamais publiée. Le
    # job CI « tests-plancher » valide que factrice fonctionne contre ces
    # planchers.
    "automatheque.schema>=0.9.6",
]

[project.urls]
Home = "https://github.com/jaegerbobomb/automatheque"
Repository = "https://github.com/jaegerbobomb/automatheque.git"

[project.scripts]
factrice = "automatheque.factrice.app:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
