[project]
name = "automatheque.factrice"
version = "0.12.0"
description = "Librairie et app simplifiée d'envoi de mail"
authors = [{name = "Marc", email = "githubmarc@maj44.com"}]
license = {text = "LGPL-3.0-or-later"}
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # >=0.14.0 : `ExpeditriceSmtp` utilise `Executant.exec(encoding=...)`,
    # ajouté dans automatheque 0.14.0 (#66).
    "automatheque>=0.14.0",
    # 0.9.6 est la plus ancienne version publiée d'automatheque.schema ; le
    # plancher précédent (>=0.9.5) référençait une version jamais publiée. Le
    # job CI « tests-plancher » valide que factrice fonctionne contre ces
    # planchers.
    "automatheque.schema>=0.9.6",
]

[project.urls]
Home = "https://github.com/jaegerbobomb/automatheque"
Repository = "https://github.com/jaegerbobomb/automatheque.git"

[project.scripts]
factrice = "automatheque.factrice.app:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
