[project]
name = "automatheque.schema"
version = "0.15.0"
description = "Domaine pour des classes courantes et partagées"
authors = [{name = "Marc", email = "githubmarc@maj44.com"}]
license = {text = "LGPL-3.0-or-later"}
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "attrs",
]

[project.urls]
Home = "https://github.com/jaegerbobomb/automatheque"
Repository = "https://github.com/jaegerbobomb/automatheque.git"

[project.optional-dependencies]
dev = [
    "pytest",
    "tox",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# Embarque le marqueur py.typed dans le wheel (typage exporté). Cf. #3.
[tool.setuptools.package-data]
"automatheque.schema" = ["py.typed"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    env_list = test_env

    [testenv]
    deps = pytest
    commands = pytest -s
"""
