[project]
name = "automatheque"
version = "0.13.0"
description = "Bibliothèque pour se faciliter le scripting !"
authors = [
    { name = "Marc", email = "githubmarc@maj44.com" },
]
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # docopt-ng : fork maintenu de docopt, même module importable `docopt`
    # (drop-in). Aligné avec commandopt, qui s'appuie lui aussi sur docopt-ng
    # (#4). Borné < 1 : garde-fou contre une 1.0 à breaking changes.
    "docopt-ng>=0.9,<1",
    # Dispatch de sous-commandes dans @script_automatheque (#39). La borne
    # >=1.0.0rc1 embarque volontairement la RC : automatheque sert de banc de
    # validation à la 1.0 de commandopt. <2 : garde-fou contre une 2.0.
    "commandopt>=1.0.0rc1,<2",
    "pytz",
    "pyyaml",
    "attrs>=19.2",
]

[project.urls]
Home = "https://github.com/jaegerbobomb/automatheque/tree/main/src/automatheque/"
Repository = "https://github.com/jaegerbobomb/automatheque.git"

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
]
